@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2022, 2023 Obeo and others.
+ * Copyright (c) 2022, 2024 Obeo and others.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -20,8 +20,6 @@ export * from './treeitems/TreeItemContextMenuContribution';
 export * from './treeitems/TreeItemContextMenuContribution.types';
 export * from './treeitems/filterTreeItem';
 export * from './views/ExplorerView';
-export * from './views/ExplorerViewConfiguration';
-export * from './views/ExplorerViewConfiguration.types';
-export * from './views/TreeConverter.types';
 export * from './views/TreeView';
 export * from './views/TreeView.types';
+export * from './views/TreeViewExtensionPoints';
