@@ -12,7 +12,6 @@
  *******************************************************************************/
 
 import { WorkbenchViewComponentProps } from '@eclipse-sirius/sirius-components-core';
-import { TreeConverter } from './TreeConverter.types';
 
 export interface TreeViewComponentProps extends WorkbenchViewComponentProps {
   treeId: string;
@@ -22,7 +21,10 @@ export interface TreeViewComponentProps extends WorkbenchViewComponentProps {
   textToHighlight: string | null;
   textToFilter: string | null;
   markedItemIds?: string[];
-  converter?: TreeConverter;
+}
+
+export interface TreeConverter {
+  convert(editingContextId: string, tree: GQLTree): GQLTree;
 }
 
 export interface GQLTreeEventVariables {
