@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Obeo.
+ * Copyright (c) 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -10,9 +10,10 @@
  * Contributors:
  *     Obeo - initial API and implementation
  *******************************************************************************/
+import { DataExtensionPoint } from '@eclipse-sirius/sirius-components-core';
+import { TreeConverter } from './TreeView.types';
 
-import { GQLForm } from '../form/FormEventFragments.types';
-
-export interface FormConverter {
-  convert(form: GQLForm): GQLForm;
-}
+export const treeViewTreeConverterExtensionPoint: DataExtensionPoint<TreeConverter[]> = {
+  identifier: 'treeView#treeConverter',
+  fallback: [],
+};
